<resources>
    <string name="app_name">The Taj Mumbai</string>
    <string name="about_history">The Taj Mahal Palace opened in Mumbai, then Bombay, in 1903, giving birth to the country’s first harbour landmark. The flagship hotel of Taj Hotels, Resorts and Palaces overlooks the majestic Gateway of India. This legendary luxury hotel has played host to kings, dignitaries and eminent personalities from across the globe, and is acknowledged as a world leader in hospitality. Each of the 550 rooms and suites between the palace and tower wing is a striking blend of nostalgic elegance, rich history and modern facilities.</string>
    <string name="about_location">Strategically located in Mumbai’s prime historical and commercial hub, The Taj Mahal Palace is walking distance from Colaba Causeway, known for its touristy tiny roadside shops. The city’s financial hub, parliament, stadium, offices and shopping districts are all located within close proximity; as is a flourishing art and heritage precinct with must visit museums, art galleries, churches and synagogues. The airports are an hour away.</string>
    <string name="about_cuisines">For those who would like to experience fine dining in style, we host 10 of the city’s most acclaimed restaurants and bars, renowned for delectable cuisines from India, Europe, the Middle East and the Orient. Relish authentic Indian cuisine at Masala Kraft; world famous Japanese dishes at Wasabi by Morimoto; exquisite Eastern Mediterranean at Souk and Chinese at Golden Dragon. Dine all day at Shamiana and choose from the exotic range of sumptuous desserts at La Patisserie. Unwind with a refreshing meal at Aquarius, the poolside restaurant; and visit the stylish Harbour Bar.</string>
    <string name="about_facilities">Signature experiences such as the afternoon tea at Sea Lounge and private dining at the Chef’s Studio make your stay with us truly memorable. Mumbai’s original luxury hotel has 11 newly refurbished halls and venues, ideal for occasions ranging from formal meetings to elaborate weddings. The Ballroom, spacious enough for 450 guests, is perfect for conferences and grand private events. You could opt for a private dinner or yacht party if you are looking to entertain in true style. Our globally acclaimed Golden Keys Concierge would be happy to help, and caters to all your requirements in the city. Come, experience the legend.</string>
    <string name="address">Apollo Bunder, Mumbai\nMaharashtra, India - 400 001</string>
    <string name="taj_email">tmhbc.bom@tajhotels.com</string>
    <string name="at_a_glance">At a Glance</string>
    <string name="history">History</string>
    <string name="location">Location</string>
    <string name="cuisines">Cuisines</string>
    <string name="facilities">Facilities</string>
    <string name="book_your_stay">Book Your Stay</string>
    <string name="book_now">Book Now</string>
    <string name="select_a_room_suite">Select a Room/Suite:</string>
    <string name="no_of_children">Number of Children (0 &#8211; 12 Years)</string>
    <string name="no_of_adults">Number of Adults (12+ Years)</string>
    <string name="check_out_date">Check-Out Date</string>
    <string name="check_in_date">Check-In Date</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="postal_address">Postal Address</string>
    <string name="get_in_touch">Get In Touch</string>
    <string name="taj_phone">+91 22 6665 3366</string>
    <string name="taj_fax">+91 22 6665 0300</string>
    <string name="we_are_social">We Are Social</string>
    <string name="about">About</string>
    <string name="rooms">Rooms &amp; Suites</string>
    <string name="home">Home</string>
    <string name="contact_us">Contact Us</string>
    <string name="taj_website"><u>taj.tajhotels.com</u></string>
    <string name="experience_the_taj_mahal_palace">Experience The Taj Mahal Palace</string>
    <string name="rajput_suite">Rajput Suite</string>
    <string name="the_tata_suite">The Tata Suite</string>
    <string name="ravi_shankar_suite">Ravi Shankar Suite</string>
    <string name="grand_luxury_suites">Grand Luxury Suites</string>
    <string name="luxury_suites">Luxury Suites</string>
    <string name="executive_suites">Executive Suites</string>
    <string name="taj_club_rooms">Taj Club Rooms</string>
    <string name="luxury_grande_rooms">Luxury Grande Rooms</string>
    <string name="tower_deluxe_rooms">Tower Deluxe Rooms</string>
    <string name="tower_superior_rooms">Tower Superior Rooms</string>
    <string name="view_details">View Details</string>
    <string name="deluxe_room_desc">The Tower Deluxe City-view Rooms are infused with a cosy, welcoming aura and offer spectacular views of the bustling Mumbai harbour and marble bathrooms. The warm lighting and stylish marble bathrooms add to your experience.</string>
    <string name="beds">Beds</string>
    <string name="bed_kqt">1 king-size, queen-size or twin bed</string>
    <string name="view">View</string>
    <string name="harbour_view">Harbour view</string>
    <string name="size">Size</string>
    <string name="deluxe_room_size">275 sq ft (26 sq m)</string>
    <string name="signature_experience">Signature Experience</string>
    <string name="deluxe_room_sig_exp">Grand interiors &amp; exciting harbour</string>
    <string name="close">Close</string>
    <string name="exec_suite_desc">Smart and contemporary, the Executive Suites are recently renovated with modern luxuries and are bedecked in either a sunlight- or an aubergine-inspired colour scheme. Unwind in these elegant suites with the heart-warming Taj hospitality.</string>
    <string name="bed_k">1 king-size bed</string>
    <string name="city_pool_view">City &amp; pool view</string>
    <string name="exec_suite_size">700&#8211;750 sq ft (65&#8211;70 sq m)</string>
    <string name="exec_suite_sig_exp">Classic style &amp; architectural character that provide a sense of history</string>
    <string name="grand_luxury_suite_sig_exp">Each uniquely designed around an evocative décor theme</string>
    <string name="grand_luxury_suite_size">1,300 sq ft</string>
    <string name="grand_luxury_suite_desc">The charming Grand Luxury Suites are each designed around an evocative theme that inspires the décor and the occupants, with artwork and antiques that create old-world charm. The suites offer stunning views of the sea beyond the Gateway.</string>
    <string name="luxury_grande_room_desc">The Palace Wing is an exemplary illustration of the blend of royal antecedents and state-of-the-art amenities. The Luxury Grande City-view Rooms are an eclectic mix of timeless elegance, modern minimalism, style and sophistication.</string>
    <string name="bed_kqdt">1 king-size, queen-size, double or twin bed</string>
    <string name="luxury_grande_room_size">350&#8211;400 sq ft (33&#8211;37 sq m)</string>
    <string name="luxury_grande_room_sig_exp">Luxurious Italian marble bathroom</string>
    <string name="luxury_suite_desc">Each of our delightfully themed Luxury Suites is adorned with original paintings and period furniture to evoke age-old grandeur. Combining classic styles with contemporary amenities and world-class service, they exemplify luxurious living.</string>
    <string name="luxury_suite_size">900&#8211;1,000 sq ft</string>
    <string name="luxury_suite_sig_exp">Uniquely themed suites with original art &amp; furniture</string>
    <string name="rajput_suite_desc">Step through the golden gates of the Rajput Suite to be transported an opulent Rajasthani palace, replete with marble floors, arches, architectural detailing, and a royal colour palette. A peacock centrepiece adds drama to the living room.</string>
    <string name="gateway_of_india_sea_views">Gateway of India &amp; sea views</string>
    <string name="rajput_suite_size">1,300&#8211;1,500 sq ft (120&#8211;139 sq m)</string>
    <string name="rajput_suite_sig_exp">Unique suite offering an expression of Rajasthani splendour</string>
    <string name="ravi_shankar_suite_desc">In 1966, George Harrison stayed in this suite under an assumed name and studied sitar under Pandit Ravi Shankar. Adorned with original artefacts and memorabilia, this whimsically luxuriant suite is an inspiration, much like the man himself.</string>
    <string name="ravi_shankar_suite_size">1,300&#8211;1,500 sq ft (120&#8211;139 sq m)</string>
    <string name="ravi_shankar_suite_sig_exp">Where Pandit Ravi Shankar taught George Harrison the sitar</string>
    <string name="superior_room_desc">The spacious Tower Superior City-view Rooms offer stunning views of the vibrant city of Mumbai from between the second and ninth floors.</string>
    <string name="city_view">City view</string>
    <string name="superior_room_size">275 sq ft (25 sq m)</string>
    <string name="superior_room_sig_exp">Uninterrupted view of the twinkling city</string>
    <string name="taj_club_room_desc">Discerning travellers enjoy the host of amenities and services of Taj Club. Located on the top floors of the Palace Wing, these spacious full-service rooms offer breathtaking bird’s eye views and greatly enhance your experience of the city.</string>
    <string name="bed_kt">1 king-size or twin bed</string>
    <string name="taj_club_room_size">400&#8211;450 sq ft (37&#8211;42 sq m)</string>
    <string name="taj_club_room_sig_exp">Exclusive access to Taj Club &amp; Lounge &amp; other services</string>
    <string name="tata_suite_desc">Created in the honor of our Founder, The Tata Suite is a extravagance of exotic artefacts, lush carpets, priceless paintings, authentic colonial furniture and fine architectural detailing. A salute to the spirit that created it!</string>
    <string name="panoramic_gateway_of_india_sea_views">Panoramic Gateway of India &amp; sea views</string>
    <string name="tata_suite_size">5,000 sq ft (465 sq m)</string>
    <string name="tata_suite_sig_exp">The epitome of luxury &#8212; the most desired suite in Mumbai</string>
    <string name="hotel_facilities">&#8226; Luxurious rooms &amp; suites with iconic Arabian Sea &amp; Gateway of India views\n&#8226; Options of smoking &amp; non-smoking accommodation\n&#8226; Marble bathrooms with luxury bath amenities or five-fixture bathrooms with luxury bath amenities\n&#8226; Complimentary Wi-Fi for resident guests\n&#8226; Fine-dining speciality restaurants—Wasabi by Morimoto (Japanese), Golden Dragon (Chinese), Masala Kraft (Contemporary Indian) &amp; Souk (Eastern Mediterranean)\n&#8226; Shamiana, 24 hour international a-la-carte restaurant\n&#8226; Aquarius, poolside restaurant for resident guests\n&#8226; La Patisserie\n&#8226; Harbour Bar\n&#8226; Sea Lounge\n&#8226; 24-hour in-room dining\n&#8226; Apollo Lounge</string>
    <string name="wellness_amenities">&#8226; Morning Yoga by the Pool\n&#8226; Jiva Spa\n&#8226; Taj Salon\n&#8226; Large outdoor pool\n&#8226; 24-hour fitness centre with Technogym equipment\n&#8226; 24-hour on-call doctor &amp; nurse\n&#8226; Facilities for the differently abled</string>
    <string name="award_1_desc">The Taj Mahal Palace was voted Best Hotel in Mumbai at the Destinasian Readers\’ Choice Awards in 2014.</string>
    <string name="award_2_desc">Golden Dragon at The Taj Mahal Palace was awarded Best Chinese Restaurant (South Mumbai) at the Times Food Guide - Mumbai Awards in 2015.</string>
    <string name="award_3_desc">Wasabi by Morimoto at The Taj Mahal Palace was awarded Best Japanese Restaurant (South Mumbai) at the Times Food Guide - Mumbai Awards in 2015.</string>
    <string name="award_1_head">The Destinasian Readers\' Choice Awards</string>
    <string name="award_2_head">Times Food Guide - Mumbai Awards</string>
    <string name="award_3_head">Times Food Guide - Mumbai Awards</string>
    <string name="awards_recognitions">Awards &amp; Recognitions</string>
</resources>