<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        tools:context="com.parthsarthi.thetajmumbai.BookFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/book_your_stay"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#8e744b"
            android:textSize="@dimen/title_text_size" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@drawable/divider" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/full_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/postalAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/postal_address"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/checkInDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/check_in_date"
            android:inputType="date" />

        <EditText
            android:id="@+id/checkOutDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/check_out_date"
            android:inputType="date" />

        <EditText
            android:id="@+id/noOfAdults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/no_of_adults"
            android:inputType="numberSigned" />

        <EditText
            android:id="@+id/noOfChild"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/no_of_children"
            android:inputType="numberSigned" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/select_a_room_suite"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/rooms"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />

        <Button
            android:id="@+id/bookBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/book_now" />

    </LinearLayout>

</ScrollView>
