<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#e6e6e6">

    <TextView
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/awards_recognitions"
        android:textAlignment="center"
        android:textColor="#8e744b"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/div"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/head"
        android:src="@drawable/divider" />

    <TextView
        android:id="@+id/award1Head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/div"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/award_1_head"
        android:textAllCaps="true"
        android:textColor="#8e744b" />

    <TextView
        android:id="@+id/award1Desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/award1Head"
        android:padding="10dp"
        android:text="@string/award_1_desc"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/award2Head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/award1Desc"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/award_2_head"
        android:textAllCaps="true"
        android:textColor="#8e744b" />

    <TextView
        android:id="@+id/award2Desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/award2Head"
        android:padding="10dp"
        android:text="@string/award_2_desc"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/award3Head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/award2Desc"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/award_3_head"
        android:textAllCaps="true"
        android:textColor="#8e744b" />

    <TextView
        android:id="@+id/award3Desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/award3Head"
        android:padding="10dp"
        android:text="@string/award_3_desc"
        android:textAlignment="center" />


    <Button
        android:id="@+id/closeBtn"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/award3Desc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/close" />

</RelativeLayout>